syntax = "proto3";

package calcpb;
option go_package = "calculator/calcpb";

message Sum {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeRequest {
    int32 prime_number = 1;
}

message PrimeResponse {
    int32 result = 1;
}

service SumService {
    // unary api
    rpc Add (SumRequest) returns (SumResponse) {};

    // streaming api
    rpc PrimeNumberDescomposition (PrimeRequest) returns (stream PrimeResponse) {};
}